# sim

./: .gitignore  CLAUDE.md  CLOSED_LOOP.md  Cargo.toml  test_blog.toml  test_wasm.js  test_wasm.mjs
configs/: config.toml  quick_test.toml  qwen3_30b_a3b.toml  test_blog.toml
src/: lib.rs  main.rs  visualization.rs  wasm.rs
src/compute/: arithmetic.rs  engine.rs  mod.rs
src/config/: hardware.rs  mod.rs  model.rs  scheduler.rs  simulation.rs  workload.rs
src/kv_cache/: block.rs  manager.rs  mod.rs
src/metrics/: collector.rs  mod.rs  quantile.rs  summary.rs
src/request/: generator.rs  mod.rs  request.rs  status.rs
src/scheduler/: decision.rs  mod.rs  policy.rs  scheduler.rs
src/simulation/: mod.rs  simulator.rs
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  simulator.worker.ts
