[package]
name = "sim"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"], optional = true }
rand = "0.8"
rand_distr = "0.4"
ordered-float = "4.0"
env_logger = { version = "0.11", optional = true }
log = "0.4"
tabled = { version = "0.16", optional = true }
colored = { version = "2.1", optional = true }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"

[features]
default = ["cli"]
cli = ["clap", "env_logger", "tabled", "colored"]

[profile.release]
opt-level = "s"  # Optimize for size in WASM
